# lvzstd

./: .gitmodules  LICENSE  README.md
labview/: lvzstd Zstandard Compression.vipb  lvzstd-errors.txt  lvzstd.lvlib  lvzstd.lvproj
labview/Private/: Check Path.vi  Guess library path.vi  Path FGV.vi  Zstd code to error.vi
labview/Public/: Bounds - compression level.vi  Bounds - thread count.vi  Compress.vi  Decompress.vi  Example.vi  Get Path.vi  Max compressed size.vi  Max uncompressed size.vi  ReadMe.vi  Set library path.vi  VI Tree.vi  Version.vi
labview/Public/API/: Bounds - compression level.vi  Bounds - thread count.vi  Compress.vi  Decompress.vi  Get Path.vi  Set library path.vi
labview/Public/API/Advanced/: Library Version.vi  Max compressed size.vi  Max uncompressed size.vi
labview/Public/API/Library Path/: Get Path.vi  Set library path.vi
labview/lvzstd/: New.vi  lvzstd.lvclass
labview/lvzstd/Accessors/: Read Default Compression level.vi  Read Library Path.vi  Write Default Compression level.vi
labview/lvzstd/Private/: Check Path.vi  Min Max Threads.vi  Zstd code to error.vi
labview/lvzstd/Public/: Bounds - compression level.vi  Bounds - thread count.vi  Compress.vi  Decompress.vi  Max compressed size.vi  Max uncompressed size.vi  Version.vi  Zstd code to error.vi
labview/test/: test.vi
src/: .gitignore  CMakeLists.txt  compile-debug.bat  compile.bat  compile.sh
src/lib/: CMakeLists.txt
src/lib/include/lvzstd/: lvzstd.h
src/lib/src/: lvzstd.cpp
src/print_errors/: CMakeLists.txt
src/print_errors/src/: main.cpp
