find_package(Threads)

setup_library(
  TARGET
    lvzstd
  NAMESPACE
    ${NAMESPACE}
  DIRECTORY
     ${CMAKE_CURRENT_SOURCE_DIR}

  INCLUDE_INTERFACE
  INCLUDE_PUBLIC
  INCLUDE_PRIVATE
  LINK_INTERFACE
  LINK_PUBLIC
  LINK_PRIVATE
    libzstd_static
    Threads::Threads
    $<$<BOOL:${WIN32}>:Winmm>
  COMPILE_OPTIONS_INTERFACE
  COMPILE_OPTIONS_PUBLIC
  COMPILE_OPTIONS_PRIVATE
  COMPILE_FEATURES_INTERFACE
  COMPILE_FEATURES_PUBLIC
    cxx_std_14
  COMPILE_FEATURES_PRIVATE

  ## Options
  GENERATE_EXPORT_HEADER
  SHARED
  DONT_RECURSE_SRC_DIR
  # STATIC
)

target_sources(lvzstd
  PRIVATE
  src/lvzstd.cpp)

